RAP-3512 Refactoring Responsive CSS to use only min-width, fixing text layout issue for under 768px

--- a/app_storefront_core/cartridge/scss/default/_page_layouts.scss
+++ b/app_storefront_core/cartridge/scss/default/_page_layouts.scss
@@ -1,11 +1,24 @@
 #wrapper {
-	background: none repeat scroll 0 0 $white;
+	background-color: $white;
+	border: 0;
 	left: 0;
 	margin: auto;
-	max-width: 960px;
+	max-width: 100%;
+	min-width: 320px;
 	position: relative;
 	transition: left 0.2s ease-in;
-	width: 960px;
+	width: 100%;
+	@media screen and (min-width: 768px) {
+		width: 760px;
+	}
+	@media screen and (min-width: 960px) {
+		max-width: 960px;
+		width: 960px;
+	}
+	&.pt_storefront {
+		max-width: 100%;
+		width: 100%;
+	}
 	&.menu-active {
 		left: 50%;
 	}
@@ -13,24 +26,6 @@
 		&.menu-active {
 			left: auto;
 		}
-	}
-	@media screen and (max-width: 767px) {
-		border: 0;
-		max-width: 100%;
-		min-width: 320px;
-		width: 100%;
-	}
-	@media screen and (min-width: 768px) and (max-width: 959px) {
-		width: 760px;
-	}
-	@media screen and (max-width: 480px) {
-		&.pt_gift-registry {
-			font-size: 12px;
-		}
-	}
-	&.pt_storefront {
-		max-width: 100%;
-		width: 100%;
 	}
 }
 
